# zephyr_project_friday

./: .gitignore  CMakeLists.txt  prj.conf
src/: main.c  main.h  prj.conf
src/lib/debug_leds/: debug_leds.c  debug_leds.h
src/lib/device_config/: device_config.h
src/lib/push_button/: push_button.c  push_button.h
src/lib/ssd1306/: fonts.c  fonts.h  ssd1306.c  ssd1306.h  ssd1306_thread.c  ssd1306_thread.h
src/lib/uart0_serial/: uart0_serial.c  uart0_serial.h
